# inference.club

./: .gitignore  BACKLOG.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  pytest.ini
backend/apps/accounts/: admin.py  anon_views.py  apps.py  authentication.py  crypto.py  handles.py  managers.py  middleware.py  models.py  pipeline.py  serializers.py  services.py  signals.py  staff_urls.py  staff_views.py  tests.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_customuser_routing_preference.py  0003_customuser_default_request_visibility_and_more.py  0004_customuser_default_collection_name.py  0005_accesspolicy_customuser_account_type_and_more.py  0006_backfill_handles.py  0007_customuser_brave_api_key.py  0008_userapikey.py  0009_customuser_fallback_model.py
backend/apps/accounts/tests/: conftest.py  test_anonymous_access.py
backend/apps/core/: models.py  permissions.py
backend/apps/inference/: admin.py  agent.py  agent_mcp.py  agent_skills.py  agent_tools.py  agent_views.py  chat_threads.py  external_keys.py  external_provider_views.py  external_providers.py  factories.py  file_views.py  hf_enrich.py  job_serializers.py  job_views.py  jobs.py  locks.py  manifest_validator.py  models.py  narration.py  openai_urls.py  openai_views.py  openapi.yaml  pagination.py  render.py  roadmap.py  serializers.py  sharing.py  staff_urls.py  staff_views.py  studio_serializers.py  studio_views.py  tailscale.py  tasks.py  throttling.py  uploads.py  urls.py  views.py  workflow_templates.py  workflows.py
backend/apps/inference/migrations/: 0001_initial.py  0002_provider_providermodel_and_more.py  0003_inferencerequest_latency_ms_and_more.py  0004_remove_provider_callback_url_and_more.py  0005_servicemanifest.py  0006_providerservice_and_more.py  0007_abuse_guardrails_and_tokens.py  0008_model_metadata_and_ttft.py  0016_contentreport.py  (+37 more)
backend/backend/: __init__.py  celery.py  settings.py  storage.py  urls.py
(+474 files in other folders)
