[tool.poetry]
name = "inference-club-backend"
version = "0.1.0"
description = "inference.club backend"
authors = ["Brian Caffey <briancaffey2010@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"

# TODO: complete major version upgrades for dependencies (!)
# Update to Django 3.2 requires additional changes
Django = "~5.2"
djangorestframework = "^3.16.0"

# redis
redis = "^6.0.0"

# celery
celery= "^5.5.2"

# for OpenAPI
uritemplate = "^4.1.1"
coreapi = "^2.3.3"
pyyaml = "^6.0.1"

gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
Pillow = "^11.1.0"

django-storages = {extras = ["boto3", "google"], version = "^1.14.4"}
whitenoise = "^6.8.2"
boto3 = "^1.35.54" # https://github.com/jschneier/django-storages/issues/1482
botocore = "^1.35.54"
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = "^5.4.0"

# sentry SDK
sentry-sdk = "^2.27.0"

# flower
flower = "^2.0.1"
django-anymail = {extras = ["amazon-ses"], version = "^12.0"}

# OpenAPI
argh = "^0.31.2"
python-social-auth = "^0.3.6"
social-auth-app-django = "^5.4.3"
requests = {extras = ["socks"], version = "^2.33.1"}
python-dotenv = "^1.2.2"
dj-database-url = "^3.1.2"

[tool.poetry.group.test.dependencies]

# test dependencies
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-django = "^4.8.2"
factory-boy = "^3.3.0"
faker = "^33.3.1"

[tool.poetry.group.dev.dependencies]

# dev dependencies
django-debug-toolbar = "^5.2.0"

# for runserver_plus
django-extensions = "^3.2.3"
Werkzeug = "^3.1.3"

# for Jupyter notebooks
ipython = "^8.31.0"
# jupyter's dependency on argon2-cffi can't be installed on Apple M1
# jupyter = { version = "^1.0.0", markers = "platform_machine == 'x86_64'" }
jupyter = "^1.1.1"
django-silk = "^5.3.0"
pyparsing = "^3.2.1"

[build-system]
requires = ["poetry-core>=2.1.2"]
build-backend = "poetry.core.masonry.api"
